# AoC_2023

./: .gitignore  .gitmodules  README.md
_blueprints/: haskell.md
bhavesh/: code-moved.txt
bhavesh/javascript/: package-lock.json  package.json
bhavesh/python/: .gitignore  main.py  process.py  util.py
bhavesh/rust/: .gitignore  Cargo.toml
bhavesh/rust/src/: main.rs  models.rs  utils.rs
bhavesh/rust/src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day15.rs  day19.rs  day20.rs
bhavesh/rust/src/models/: aoc_answer.rs  aplenty.rs  camel_cards.rs  cube_conundrum.rs  haunted_wasteland.rs  lens_library.rs  pulse_propagation.rs  scratchcards.rs  seeds.rs
bhavesh/rust/src/utils/: get_question_data.rs
damien/scaffold/: .gitignore  project.clj
damien/thingICantDoInClojure/: .gitignore  Cargo.toml
deanddm/: AOC2023.csproj  AOC2023.sln  Day1.cs  Day10.cs  Day11.cs  Day2.cs  Day24.cs  Day3.cs  Day4.cs  Day5.cs  Day6.cs  Day7.cs  Day8.cs  Day9.cs  Program.cs  input.day24.txt  input.day6.txt
francoisb/1_December/: 1_December.csproj  1_December.sln  Program.cs
francoisb/2_December/: 2_December.sln  Program.cs
francoisb/3_December/: 3_December.csproj  3_December.sln  Program.cs
francoisb/4_December/: 4_December.csproj  4_December.sln  Program.cs
francoisb/5_December/: 5_December.csproj  5_December.sln  Program.cs
francoisb/6_December/: 6_December.csproj  6_December.sln  Program.cs
francoisb/7_December/: 7_December.sln  Program.cs
francoisb/8_December/: 8_December.csproj  8_December.sln  Program.cs
francoisb/9_December/: 9_December.csproj  9_December.sln  Program.cs
francoisb/Base/: Base.sln  (+1 more)
harshil/: .gitignore
jerry/: README  main.py  traversal.py
lukaszmac/: lukes-notes-to-self.md
ryanh/: go.mod
tjaard/: README.md  aoc.cabal  day-01.hs
tjaard/app/: Day01.hs  Day02.hs  Day02Model.hs  Day02ShowFns.hs  Day03.hs  Day04.hs  Grid.hs  Main.hs  Utils.hs
tjaard/data/: day03  day03-test  day04-test
tom/: .gitignore  2033  CHANGELOG.md  Day01.hs  aoc.cabal  run  sync.sh  tom.cabal
(+355 files in other folders)
